--- a/index.html
+++ b/index.html
@@ -1,37 +1,130 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>FAIM-QIRF Agent Demo • Epistemic Justice & Formalism</title>
+  <title>FAIM-QIRF Demo — Diagnostics</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <style>
+    body{font:14px/1.45 system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;margin:20px;max-width:900px}
+    h1{margin:0 0 8px}
+    #root{margin-top:16px;padding:12px;border:1px solid #ddd;border-radius:12px}
+    #error-overlay{position:fixed;inset:0;background:rgba(0,0,0,.75);color:#fff;z-index:99999;display:none;overflow:auto;padding:16px}
+    #error-overlay h2{margin:0 0 8px}
+    #error-overlay pre{white-space:pre-wrap}
+  </style>
 
-  <!-- Tailwind via CDN -->
-  <script src="https://cdn.tailwindcss.com"></script>
-
-  <!-- React + Babel (CDN) -->
-  <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
-  <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
-  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-
-  <link rel="stylesheet" href="./css/styles.css?v=1" />
-</head>
-<body class="bg-gray-50">
-  <div id="root"></div>
+  <!-- Error overlay (catches errors even if console won’t open) -->
   <script>
-  document.getElementById('root').insertAdjacentHTML('beforeend','<p style="padding:8px;color:#0a0">JS ran ✅</p>');
-  window.addEventListener('error', e => alert('JS error: ' + e.message));
-</script>
+  (function(){
+    function installOverlay(){
+      const o=document.createElement('div');
+      o.id='error-overlay';
+      o.innerHTML='<h2>Runtime error</h2><pre id="errpre"></pre>';
+      document.body.appendChild(o);
+      return o;
+    }
+    function show(msg){
+      const o=document.getElementById('error-overlay')||installOverlay();
+      o.style.display='block';
+      o.querySelector('#errpre').textContent=msg;
+    }
+    window.addEventListener('error', e=>{
+      const msg=[
+        'Message: '+e.message,
+        'Source: '+(e.filename||'unknown'),
+        'Line: '+(e.lineno||'?')+', Col: '+(e.colno||'?'),
+        e.error&&e.error.stack?('Stack:\\n'+e.error.stack):''
+      ].join('\\n');
+      show(msg);
+    });
+    window.addEventListener('unhandledrejection', e=>{
+      show('Unhandled Promise Rejection:\\n'+(e.reason&&e.reason.stack||e.reason));
+    });
+    window.onerror=function(message, source, lineno, colno, error){
+      const msg=[
+        'Message: '+message,
+        'Source: '+source,
+        'Line: '+lineno+', Col: '+colno,
+        error&&error.stack?('Stack:\\n'+error.stack):''
+      ].join('\\n');
+      show(msg);
+    };
+  })();
+  </script>
+</head>
+<body>
+  <h1>FAIM-QIRF Demo — Diagnostics Mode</h1>
+  <p>If something fails, an overlay will tell you what and where. Below, dependencies and local assets turn green when OK.</p>
 
+  <section id="deps">
+    <h2>Dependencies</h2>
+    <ul id="dep-list">
+      <li data-dep="React">React: <span>loading…</span></li>
+      <li data-dep="ReactDOM">ReactDOM: <span>loading…</span></li>
+      <li data-dep="Babel">Babel: <span>loading…</span></li>
+    </ul>
+  </section>
 
-  <!-- Core (plain JS, attaches to window.FAIM) -->
-  <script src="./js/core/models.js?v=1"></script>
+  <section id="assets">
+    <h2>Local assets</h2>
+    <p>(Adjust these names to match your files; they must be at the repo root or fix the paths.)</p>
+    <ul id="asset-list"></ul>
+  </section>
 
-  <!-- UI modules (JSX via Babel) -->
-  <script type="text/babel" src="./js/components/ModelBuilder.js?v=1"></script>
-  <script type="text/babel" src="./js/components/GateEditor.js?v=1"></script>
-  <script type="text/babel" src="./js/components/OperatorPanel.js?v=1"></script>
-  <script type="text/babel" src="./js/components/MetricsDashboard.js?v=1"></script>
-  <script type="text/babel" src="./js/components/ChangeLog.js?v=1"></script>
-  <script type="text/babel" src="./js/App.js?v=1"></script>
+  <div id="root"></div>
+
+  <!-- CDN deps — note crossorigin to avoid “Script error.” -->
+  <script src="https://unpkg.com/react@18/umd/react.production.min.js" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/@babel/standalone@7.25.0/babel.min.js" crossorigin="anonymous"></script>
+
+  <!-- Dependency + file existence checks -->
+  <script>
+    function markDeps(){
+      document.querySelectorAll('#dep-list li').forEach(li=>{
+        const dep=li.getAttribute('data-dep');
+        const ok=!!window[dep];
+        li.querySelector('span').textContent=ok?'OK':'MISSING';
+        li.style.color=ok?'green':'red';
+      });
+    }
+    markDeps();
+
+    // List your expected local JS files here (edit names/paths as needed)
+    const expectedLocalFiles = [
+      './core.js',
+      './operators.js',
+      './components.js',
+      './app.js'
+    ];
+    const ul=document.getElementById('asset-list');
+    expectedLocalFiles.forEach(path=>{
+      const li=document.createElement('li');
+      li.textContent=path+' → checking…';
+      ul.appendChild(li);
+      fetch(path,{cache:'no-store'}).then(r=>{
+        li.textContent=path+' → '+(r.ok?'OK':'NOT FOUND ('+r.status+')');
+        li.style.color=r.ok?'green':'red';
+      }).catch(err=>{
+        li.textContent=path+' → ERROR '+err;
+        li.style.color='red';
+      });
+    });
+  </script>
+
+  <!-- Minimal sanity check: React + Babel render -->
+  <script type="text/babel">
+    function Hello(){ return <div>Hello from React + Babel ✅</div>; }
+    const root = ReactDOM.createRoot(document.getElementById('root'));
+    root.render(<Hello />);
+  </script>
+
+  <!-- Now load YOUR app files (uncomment one at a time when Hello works) -->
+  <!--
+  <script type="text/babel" src="./core.js"></script>
+  <script type="text/babel" src="./operators.js"></script>
+  <script type="text/babel" src="./components.js"></script>
+  <script type="text/babel" src="./app.js"></script>
+  -->
 </body>
 </html>
